--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "expo-symbols": "~0.2.0",
     "expo-system-ui": "~4.0.4",
     "expo-web-browser": "~14.0.1",
+    "formik": "^2.4.6",
     "i18next": "^24.0.5",
     "nativewind": "^4.1.23",
     "react": "18.3.1",
@@ -49,7 +50,8 @@
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.2",
     "react-redux": "^9.1.2",
-    "tailwindcss": "^3.4.16"
+    "tailwindcss": "^3.4.16",
+    "yup": "^1.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
