--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-native": "0.76.3",
     "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-picker": "^4.3.7",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
