--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "expo-font": "~13.0.1",
     "expo-haptics": "~14.0.0",
     "expo-linking": "~7.0.3",
+    "expo-localization": "~16.0.0",
     "expo-router": "~4.0.9",
     "expo-splash-screen": "~0.29.13",
     "expo-status-bar": "~2.0.0",
@@ -46,6 +47,7 @@
     "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-picker": "^4.3.7",
     "react-native-reanimated": "~3.16.1",
+    "react-native-restart": "^0.0.27",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
     "react-native-web": "~0.19.13",
