--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-native-webview": "13.12.2",
     "react-redux": "^9.1.2",
     "tailwindcss": "^3.4.16",
+    "uuid": "^11.0.3",
     "yup": "^1.5.0"
   },
   "devDependencies": {
@@ -61,6 +62,7 @@
     "@types/jest": "^29.5.12",
     "@types/react": "~18.3.12",
     "@types/react-test-renderer": "^18.3.0",
+    "@types/uuid": "^10.0.0",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.2",
     "react-test-renderer": "18.3.1",
