--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "expo-web-browser": "~14.0.1",
     "formik": "^2.4.6",
     "i18next": "^24.0.5",
+    "lottie-react-native": "^7.1.0",
     "nativewind": "^4.1.23",
     "react": "18.3.1",
     "react-dom": "18.3.1",
