--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-native": "0.76.3",
     "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-get-random-values": "^1.11.0",
     "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-picker": "^4.3.7",
     "react-native-reanimated": "~3.16.1",
