--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "formik": "^2.4.6",
     "i18next": "^24.0.5",
     "lottie-react-native": "^7.1.0",
+    "moment": "^2.30.1",
     "nativewind": "^4.1.23",
     "react": "18.3.1",
     "react-dom": "18.3.1",
