--- a/package.json
+++ b/package.json
@@ -77,7 +77,10 @@
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^4.6.2",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "jest-expo": "~52.0.2",
+    "jest-mock": "^29.7.0",
+    "jest-react-native": "^18.0.0",
     "react-test-renderer": "18.3.1",
     "redux-mock-store": "^1.5.5",
     "typescript": "^5.3.3"
