--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-picker": "^4.3.7",
     "react-native-reanimated": "~3.16.1",
+    "react-native-refresh-control": "^2.1.0",
     "react-native-restart": "^0.0.27",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
